--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -45,10 +45,10 @@
         <!--Ad One-->
 			{% if content.field_newsletter_promo_image_one|render %}
 				{% if content.field_newsletter_promo_link_one|render %}
-                <table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: #f2f2f2;">
+                <table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
                     <tbody>
                         <tr>
-                            <td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+                            <td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
                                 <a href="{{ content.field_newsletter_promo_link_one|render|striptags|trim }}">
                                     <img width="100%" src="{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
                                 </a>
@@ -60,7 +60,7 @@
                 <table role="presentation">
                     <tbody>
                         <tr>
-                            <td align="center"style="text-align: left; padding-right:10px; padding-left:10px">
+                            <td align="center"style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
                                 <img width="100%"src="{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
                             </td>
                         </tr>
@@ -118,10 +118,10 @@
         <!--Ad Two-->
         {% if content.field_newsletter_promo_image_two|render %}
         {% if content.field_newsletter_promo_link_two|render %}
-        <table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: #f2f2f2;">
+        <table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
             <tbody>
                 <tr>
-                    <td width="500px" style="text-align: left; padding-right:10px; padding-left:10px"> 
+                    <td width="500px" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px"> 
                         <a href="{{ content.field_newsletter_promo_link_two|render|striptags|trim }}">
                             <img width="100%" src="{{file_url(node.field_newsletter_promo_image_two.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
                         </a>
@@ -130,10 +130,10 @@
             </tbody>
         </table>
         {% else %}
-        <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: #f2f2f2;">
+        <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
             <tbody>
                 <tr>
-                    <td style="text-align: left; padding-right:10px; padding-left:10px"> 
+                    <td style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px"> 
                         <img src="{{file_url(node.field_newsletter_promo_image_two.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
                     </td>
                 </tr>
