--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -28,21 +28,21 @@
 						<tbody>
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
 									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 									<img width="100%" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
 								</td>
 									{# Code to render selected article content (!thumbnail) #}
 								{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
 									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 									<img width="100%" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
 								</td>
 									{# Code to render user made content #}
 								{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px;">
 									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 									<img width="100%" src="{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
@@ -109,11 +109,11 @@
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
 					<!--Teaser Article-->
-					<table role="presentation">
+					<table role="presentation" width="100%">
 						<tbody>
-							<tr>
+							<tr style="border-bottom: solid rgba(128, 128, 128, 0.333);">
 								{# Image #}
-								<td valign="top" style="text-align: left; padding-right:10px; padding-left:10px">
+								<td valign="top" width="100px" height="100px" style="text-align: left; padding-right:10px; padding-left:10px">
 										{# Code to render selected article content (thumbnail) #}
 										{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 											<img
@@ -165,7 +165,7 @@
 							{# Code to render selected article content (categories) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
 							<tr>
-								<td>
+								<td class="article-teaser-meta">
 														{# TO DO - Fix categories #}
 									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
 								</td>
