--- a/css/ucb-people-list.css
+++ b/css/ucb-people-list.css
@@ -20,6 +20,7 @@
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(20 20 20 / 20%);
+  margin-left: 0px;
 }
 
 .ucb-person-card-details {
