--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -68,6 +68,8 @@
 		<rave-alert feed="https://www.getrave.com/rss/cuboulder/channel1" link="https://alerts.colorado.edu"></rave-alert>
 	{% endif %}
 
+	{% include '@boulderD9_base/includes/ucb-sticky-menu.html.twig' %}
+
     {{ page.header }}
     <div class="page-header">
     {% if user.hasPermission('access administration pages') %}
