--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -7,10 +7,10 @@
  * Otherwise your data will break out of the table and instead become a sibling element to the outer table element
  * See: https://www.w3schools.com/html/html_tables.asp
 #}
-<table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
+<table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
 	<tbody>
   		<tr>
-			<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+			<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-top:20px; padding-bottom:20px;">
       			<h2>{{ content.field_newsletter_section_title|render|striptags|trim }}</h2>
 	  		</td>
  		</tr>
@@ -24,7 +24,7 @@
 				{%  if key|first != '#' %}
 					{# Code to render selected article content (thumbnail) #}
 					<!--Feature Article-->
-					<table role="presentation">
+					<table role="presentation" style="padding-bottom: 20px;">
 						<tbody>
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
@@ -109,7 +109,7 @@
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
 					<!--Teaser Article-->
-					<table role="presentation" width="100%">
+					<table role="presentation" width="100%" style="padding-bottom: 20px;">
 						<tbody>
 							<tr style="border-bottom: solid rgba(128, 128, 128, 0.333);">
 								{# Image #}
