--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -7,6 +7,10 @@
  * Otherwise your data will break out of the table and instead become a sibling element to the outer table element
  * See: https://www.w3schools.com/html/html_tables.asp
 #}
+
+
+{% set base_url = url('<front>')|render|split('/', -1)|join('/') %}
+
 <table role="presentation"  border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
 	<tbody>
   		<tr>
@@ -29,22 +33,22 @@
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
-									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-									<img width="100%" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+									<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+									<img width="100%" src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
 								</td>
 									{# Code to render selected article content (!thumbnail) #}
 								{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
-									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-									<img width="100%" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.fileuri|image_style('focal_image_square'))}}"/>
+									<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+									<img width="100%" src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
 								</td>
 									{# Code to render user made content #}
 								{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px;">
-									<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-									<img width="100%" src="{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+									<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+									<img width="100%" src="{{base_url}}{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 									</a>
 								</td>
 								{% endif %}
@@ -54,7 +58,7 @@
 					<tr id="feature-article-title-email-{{key}}">
 						<td align="center" style="text-align: left; padding-right:10px; padding-left:10px"align="center" style="text-align: left; padding-right:10px; padding-left:10px">
 							<h3>
-								<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+								<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 									{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
 								</a>
 							</h3>
@@ -73,13 +77,13 @@
 				{# Code to render selected article content (categories) #}
 				{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
 				<tr>
-					<td class="tags" align="center" style="text-align: left; padding-right:10px; padding-left:10px">{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}</td>
+					<td class="tags" align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:10px">{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}</td>
 				</tr>
 
 				{# Code to render user made content (categories) #}
 				{% elseif item.entity.field_news_content_categories is not empty %}
 				<tr>
-					<td class="tags" align="center" style="text-align: left; padding-right:10px; padding-left:10px">{{ item.entity.field_news_content_categories|view }}</td>
+					<td class="tags" align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:10px">{{ item.entity.field_news_content_categories|view }}</td>
 				</tr>
 				{% endif %}
 					{# Code to render selected article content (summary) #}
@@ -111,7 +115,7 @@
 					<!--Teaser Article-->
 					<table role="presentation" width="100%" style="padding-bottom: 20px;">
 						<tbody>
-							<tr style="border-bottom: solid rgba(128, 128, 128, 0.333);">
+							<tr class="email-feature-art-row"style="border-bottom: solid rgba(128, 128, 128, 0.333);">
 								{# Image #}
 								<td valign="top" width="100px" height="100px" style="text-align: left; padding-right:10px; padding-left:10px">
 										{# Code to render selected article content (thumbnail) #}
@@ -119,21 +123,21 @@
 											<img
 											width="100px"
 											height="100px"
-											src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
+											src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
 			
 											{# Code to render selected article content (!thumbnail) #}
 										{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
 											<img
 											width="100px"
 											height="100px"
-											src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
+											src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
 			
 											{# Code to render user made content #}
 										{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
 											<img
 											width="100px"
 											height="100px"
-											 src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
+											 src="{{base_url}}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
 										{% endif %}
 								</td>
 								{# Header, Summary, Cats #}
@@ -146,7 +150,7 @@
 												{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
 												<td>
 													<h3>
-													<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+													<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 														{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
 													</a>
 												</h3>
@@ -165,7 +169,7 @@
 							{# Code to render selected article content (categories) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
 							<tr>
-								<td class="article-teaser-meta tags">
+								<td class="article-teaser-meta tags" style="padding-bottom: 10px;">
 														{# TO DO - Fix categories #}
 									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
 								</td>
@@ -173,7 +177,7 @@
 							{# Code to render user made content (categories) #}
 						{% elseif item.entity.field_news_content_categories is not empty %}
 						<tr>
-							<td class="tags">
+							<td class="tags" style="padding-bottom: 10px;">
 													{# TO DO - Fix categories #}
 								{{ item.entity.field_news_content_categories|view }}
 							</td>
