--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -125,7 +125,7 @@ td>h3>a{
 
         {% set base_url = url('<front>')|render|split('/', -1)|join('/') %}
 
-    <div id="email" style="width:600px;margin: auto;background:white;">
+    <div id="email" style="width:600px;margin: auto;background:white;" data-url="{{base_url}}">
         <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; padding-bottom:20px;font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
             <!-- Header --> 
             {# TO DO: Header #}
