wip: Link styling, button only appears on email version of newsletter page

--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -215,7 +215,7 @@
 		<table>
 			<tbody>
 				<tr>
-					<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+					<td class='article-link' align="center" style="text-align: left; padding-right:10px; padding-left:10px">
 						{{ content.field_newsletter_section_link }}
 					</td>
 				</tr>
