--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -18,12 +18,19 @@
 %}
 {{ attach_library('boulderD9_base/ucb-page') }}
 
-{{ attach_library('boulderD9_base/ucb-newsletter') }}
+{{ attach_library('boulderD9_base/ucb-newsletter-email') }}
 
 <div class="container" id="email-preview" style="background-color: grey">
     <html>
         <head>
             <style>
+
+                
+                a, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
                 .tags > a{
                     color: #656565 !important;
                     text-decoration: none;
@@ -47,18 +54,18 @@
 };
 
 .button.button-blue,.button-blue,.buttons-color-blue a,.buttons-color-blue a.button, td> .button {
-    background-color: #0277BD;
+    background-color: #0277BD !important;
     color: #fff !important;
-    display: inline-block;
-    padding: 5px 10px;
-    font-weight: bold;
-    transition: background-color 0.5s ease;
-    margin-bottom: 5px;
+    display: inline-block !important;
+    padding: 5px 10px !important;
+    font-weight: bold !important;
+    transition: background-color 0.5s ease !important;
+    margin-bottom: 5px !important;
     text-decoration: none !important;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-background-clip: padding-box;
+    -webkit-border-radius: 3px !important;
+    -moz-border-radius: 3px !important;
+    border-radius: 3px !important;
+    -webkit-background-clip: padding-box !important;
     -moz-background-clip: padding;
     background-clip: padding-box;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
@@ -72,8 +79,8 @@
 };
 
 .button.button-blue:hover,.button.button-blue:focus,.buttons-color-blue a:hover,.buttons-color-blue a:focus,.buttons-color-blue a.button:hover,.buttons-color-blue a.button:focus {
-    background-color: #026dae;
-    background-color: #026baa;
+    background-color: #026dae !important;
+    background-color: #026baa !important;
     -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
@@ -85,7 +92,7 @@
     box-shadow: 0 3px 15px rgba(0,0,0,0.35);
 };
 a:link,a:visited {
-    color: #0277BD;
+    color: #0277BD !important;
     transition: background-color 0.25s ease,border-color 0.25s ease,color 0.25s ease;
     text-decoration: none;
     text-decoration-color: rgba(2,119,189,0.65);
