--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -140,6 +140,7 @@ td>h3>a{
         <table role='presentation' width="100%">
             <tbody>
                 <tr>
+                    <td style="padding-left:10px; text-align:left">{{ node.changed.value|date("M. j, Y") }}</td>
                     <td style="padding-right:10px;text-align:right;">
                         <a href="{{base_url}}{{ path('entity.node.canonical', {'node': node.id}) }}">View on website</a>
                     </td>
