--- a/templates/paragraphs/paragraph--newsletter-section.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section.html.twig
@@ -24,15 +24,15 @@
 				{%  if key|first != '#' %}
 					{# Code to render selected article content (thumbnail) #}
 					{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-						<div id='feature-article-thumbnail-{{key}}'> {{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail|view }} </div>
+						<div id='feature-article-thumbnail-{{key}}' class="feature-article-img"> {{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail|view }} </div>
 
 						{# Code to render selected article content (!thumbnail) #}
 					{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-						<div id='feature-article-content-{{key}}'>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media|view }}</div>
+						<div id='feature-article-content-{{key}}' class="feature-article-img">{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media|view }}</div>
 
 						{# Code to render user made content #}
 					{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-						<div id='feature-article-media-img-{{key}}'>{{ item.entity.field_newsletter_content_image|view }}</div>
+						<div id='feature-article-media-img-{{key}}' class="feature-article-img">{{ item.entity.field_newsletter_content_image|view }}</div>
 					{% endif %}
 
 					{# Code to render selected article title/url #}
@@ -92,7 +92,7 @@
 			<div class="row row-content">
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
-						<div class="col-lg-5 col-8">
+						<div class="col-lg-4 col-8 pb-4">
 
 							{# Code to render selected article title/url #}
 							{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
@@ -144,7 +144,7 @@
 							{% endif %}
 						</div>
 						<div
-							class="col-lg-1 col-4 align-self-center">
+							class="teaser-article-img">
 							{# Code to render selected article content (thumbnail) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 								<img
