--- a/templates/paragraphs/paragraph--newsletter-section.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section.html.twig
@@ -92,7 +92,25 @@
 			<div class="row row-content">
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
-						<div class="col-lg-4 col-8 pb-4">
+						<div class="col-lg-6 col-8 pb-4">
+
+							<div
+							class="teaser-article-img px-2">
+							{# Code to render selected article content (thumbnail) #}
+							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
+								<img
+								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
+
+								{# Code to render selected article content (!thumbnail) #}
+							{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
+								<img
+								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
+
+								{# Code to render user made content #}
+							{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
+								<img src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
+							{% endif %}
+						</div>
 
 							{# Code to render selected article title/url #}
 							{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
@@ -124,6 +142,8 @@
 							{% endif %}
 
 
+
+
 							{# Code to render selected article content (summary) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
 								<div class="article-summary">
@@ -142,23 +162,7 @@
 									{{ item.entity.field_newsletter_content_text|view }}
 								</div>
 							{% endif %}
-						</div>
-						<div
-							class="teaser-article-img">
-							{# Code to render selected article content (thumbnail) #}
-							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-								<img
-								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
-
-								{# Code to render selected article content (!thumbnail) #}
-							{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-								<img
-								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
-
-								{# Code to render user made content #}
-							{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-								<img src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
-							{% endif %}
+							
 						</div>
 					{% endif %}
 				{% endfor %}
