--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -50,6 +50,9 @@ i.far.fa-calendar {
   background: #e7e7e7;
   color: #555;
   padding: 2px 6px;
+  display: inline-block;
+  text-transform: uppercase;
+  margin: 0 5px 5px 0;
 }
 
 .ucb-article-categories a:hover,
