--- a/css/ucb-people-list.css
+++ b/css/ucb-people-list.css
@@ -158,3 +158,7 @@ tbody.ucb-people-list-table-tablebody {
 .ucb-person-card-body {
   padding-bottom: .5rem;
 }
+
+.ucb-person-card-img-grid > a > img {
+  width: 100%;
+}
