--- a/templates/block/block--image-gallery.html.twig
+++ b/templates/block/block--image-gallery.html.twig
@@ -28,7 +28,7 @@
 			<h2{{title_attributes}}>{{ label }}</h2>
 		{% endif %}
 		{{ title_suffix }}
-		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 justify-content-center gallery-div">
+		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 gallery-div">
 			{% for key, item in content['#block_content'].field_image_gallery_photo if key|first != '#' %}
 				{% if item.entity.field_media_image_caption.value|render|striptags|trim %}
 					{% set photoDescription = item.entity.field_media_image_caption.value|render|striptags|trim %}
